Update translation - 105125429 (#3874) 1efe22d157053abc532268c98e01c074cfc40b8c

--- a/es/food-resources/index.html
+++ b/es/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Comida y asistencia alimentaria</h1>
           
-            <p class="small-text">Última actualización&nbsp;15 de marzo de 2021 a las 9:14 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;25 de marzo de 2021 a las 3:13 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><a href="/es/food-resources/#emergency-food"><strong>alimentos de emergencia y beneficios de alimentos</strong></a></li><li><a href="/es/food-resources/#families-with-school-aged-children"><strong>familias con hijos en edad escolar</strong></a></li><li><a href="/es/food-resources/#older-adults"><strong>adultos mayores </strong></a></li><li><a href="/es/food-resources/#grocery-delivery-options"><strong>opciones de entrega de comestibles</strong></a></li><li><a href="/es/food-resources/#how-you-can-help"><strong>cómo puede usted ayudar</strong></a></li></ul>
+<ul class="toc"><li><a href="/es/food-resources/#emergency-food"><strong>alimentos de emergencia y beneficios de alimentos</strong></a></li><li><a href="/es/food-resources/#families-with-school-aged-children"><strong>familias con hijos en edad escolar</strong></a></li><li><a href="/es/food-resources/#older-adults"><strong>adultos mayores </strong></a></li><li><a href="/es/food-resources/#grocery-delivery-options"><strong>opciones de entrega de comestibles</strong></a></li><li><a href="/es/food-resources/#how-you-can-help"><strong>cómo puede usted ayudar</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">Beneficios de alimentos de CalFresh</h3>
+<h3>Beneficios de alimentos de CalFresh</h3>
 
 
 
-<p class="js-qa-answer">CalFresh ofrece beneficios alimentarios para ayudar a las personas a comprar la mayoría de los alimentos en la mayoría de las tiendas de comestibles y mercados de agricultores. Las personas y las familias con bajos ingresos pueden solicitar CalFresh en cualquier momento. Si el monto de sus ingresos cambia, aunque sea de manera temporal debido al coronavirus, puede solicitar los beneficios de alimentos de CalFresh.</p>
+<p>CalFresh ofrece beneficios alimentarios para ayudar a las personas a comprar la mayoría de los alimentos en la mayoría de las tiendas de comestibles y mercados de agricultores. Las personas y las familias con bajos ingresos pueden solicitar CalFresh en cualquier momento. Si el monto de sus ingresos cambia, aunque sea de manera temporal debido al coronavirus, puede solicitar los beneficios de alimentos de CalFresh.</p>
 
 
 
-<p class="js-qa-answer">Para hacerlo, visite <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> en línea o llame al <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
+<p>Para hacerlo, visite <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> en línea o llame al <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
 
 
 
