--- a/ko/food-resources/index.html
+++ b/ko/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>식품 및 식품 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 15일 오전 9:14</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 25일 오후 3:13</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><a href="/ko/food-resources/#emergency-food"><strong>긴급 식품 및 식품 혜택</strong></a></li><li><a href="/ko/food-resources/#families-with-school-aged-children"><strong>학령기 자녀를 둔 가족</strong></a></li><li><a href="/ko/food-resources/#older-adults"><strong>노인 </strong></a></li><li><a href="/ko/food-resources/#grocery-delivery-options"><strong>식료품 배달 옵션</strong></a></li><li><a href="/ko/food-resources/#how-you-can-help"><strong>도움 제공 방법</strong></a></li></ul>
+<ul class="toc"><li><a href="/ko/food-resources/#emergency-food"><strong>긴급 식품 및 식품 혜택</strong></a></li><li><a href="/ko/food-resources/#families-with-school-aged-children"><strong>학령기 자녀를 둔 가족</strong></a></li><li><a href="/ko/food-resources/#older-adults"><strong>노인 </strong></a></li><li><a href="/ko/food-resources/#grocery-delivery-options"><strong>식료품 배달 옵션</strong></a></li><li><a href="/ko/food-resources/#how-you-can-help"><strong>도움 제공 방법</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">CalFresh 식품 혜택</h3>
+<h3>CalFresh 식품 혜택</h3>
 
 
 
-<p class="js-qa-answer">CalFresh는 대부분의 식료품점 및 파머스 마켓에서 대부분의 식품을 구매할 수 있는 식품 혜택을 제공합니다. 저소득층 개인과 가정은 언제든지 CalFresh를 신청할 수 있습니다. 코로나바이러스 때문에 소득이 변동이 생긴 경우 CalFresh 식량 혜택을 신청할 수 있습니다. 일시적인 소득 변동일지라도 상관없습니다.</p>
+<p>CalFresh는 대부분의 식료품점 및 파머스 마켓에서 대부분의 식품을 구매할 수 있는 식품 혜택을 제공합니다. 저소득층 개인과 가정은 언제든지 CalFresh를 신청할 수 있습니다. 코로나바이러스 때문에 소득이 변동이 생긴 경우 CalFresh 식량 혜택을 신청할 수 있습니다. 일시적인 소득 변동일지라도 상관없습니다.</p>
 
 
 
-<p class="js-qa-answer">신청하려면  <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>  온라인 사이트를 방문하거나  <a href="tel:[1-877-847-3663]">1-877-847-3663</a>(1-877-847-FOOD)으로 전화하십시오. </p>
+<p>신청하려면  <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>  온라인 사이트를 방문하거나  <a href="tel:[1-877-847-3663]">1-877-847-3663</a>(1-877-847-FOOD)으로 전화하십시오. </p>
 
 
 
