--- a/tl/food-resources/index.html
+++ b/tl/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagkain at tulong sa pagkain</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 15, 2021 sa 9:14 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 25, 2021 sa 3:13 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><a href="/tl/food-resources/#emergency-food"><strong>Pagkain sa emergency at mga benepisyo sa pagkain</strong></a></li><li><a href="/tl/food-resources/#families-with-school-aged-children"><strong>Mga pamilyang may mga batang nag-aaral pa</strong></a></li><li><a href="/tl/food-resources/#older-adults"><strong>Mga nakakatandang nasa hustong gulang </strong></a></li><li><a href="/tl/food-resources/#grocery-delivery-options"><strong>Mga opsyon sa pag-deliver ng grocery</strong></a></li><li><a href="/tl/food-resources/#how-you-can-help"><strong>Paano ka makakatulong</strong></a></li></ul>
+<ul class="toc"><li><a href="/tl/food-resources/#emergency-food"><strong>Pagkain sa emergency at mga benepisyo sa pagkain</strong></a></li><li><a href="/tl/food-resources/#families-with-school-aged-children"><strong>Mga pamilyang may mga batang nag-aaral pa</strong></a></li><li><a href="/tl/food-resources/#older-adults"><strong>Mga nakakatandang nasa hustong gulang </strong></a></li><li><a href="/tl/food-resources/#grocery-delivery-options"><strong>Mga opsyon sa pag-deliver ng grocery</strong></a></li><li><a href="/tl/food-resources/#how-you-can-help"><strong>Paano ka makakatulong</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">Mga benepisyo sa pagkain ng CalFresh</h3>
+<h3>Mga benepisyo sa pagkain ng CalFresh</h3>
 
 
 
-<p class="js-qa-answer">Nagbibigay ang CalFresh ng mga benepisyo sa pagkain para makatulong sa mga taong mabili ang karamihan ng mga pagkain sa karamihan ng mga grocery store at farmers market. Puwedeng mag-apply sa CalFresh anumang oras ang mga tao at pamilyang may mababang kita. Kung nagkaroon ng pagbabago ang kita mo, kahit pansamantala pa ito dahil sa coronavirus, puwede kang mag-apply para sa mga benepisyo sa pagkain sa CalFresh.</p>
+<p>Nagbibigay ang CalFresh ng mga benepisyo sa pagkain para makatulong sa mga taong mabili ang karamihan ng mga pagkain sa karamihan ng mga grocery store at farmers market. Puwedeng mag-apply sa CalFresh anumang oras ang mga tao at pamilyang may mababang kita. Kung nagkaroon ng pagbabago ang kita mo, kahit pansamantala pa ito dahil sa coronavirus, puwede kang mag-apply para sa mga benepisyo sa pagkain sa CalFresh.</p>
 
 
 
-<p class="js-qa-answer">Para mag-apply, bisitahin ang <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> online o tumawag sa <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
+<p>Para mag-apply, bisitahin ang <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> online o tumawag sa <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
 
 
 
