--- a/vi/food-resources/index.html
+++ b/vi/food-resources/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thực phẩm và hỗ trợ thực phẩm</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;15 tháng 3, 2021 lúc 9:14</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 3, 2021 lúc 15:13</p>
           
         </div>
       </div>
@@ -163,11 +163,11 @@
 
 
 
-<p>Trên trang này:</p>
+<p class="h3">Trên trang này:</p>
 
 
 
-<ul><li><a href="/vi/food-resources/#emergency-food"><strong>Thực phẩm khẩn cấp và trợ cấp thực phẩm</strong></a></li><li><a href="/vi/food-resources/#families-with-school-aged-children"><strong>Các gia đình có con em ở độ tuổi đến trường</strong></a></li><li><a href="/vi/food-resources/#older-adults"><strong>Người già </strong></a></li><li><a href="/vi/food-resources/#grocery-delivery-options"><strong>Tùy chọn giao hàng tạp hóa</strong></a></li><li><a href="/vi/food-resources/#how-you-can-help"><strong>Quý vị có thể làm gì để giúp đỡ</strong></a></li></ul>
+<ul class="toc"><li><a href="/vi/food-resources/#emergency-food"><strong>Thực phẩm khẩn cấp và trợ cấp thực phẩm</strong></a></li><li><a href="/vi/food-resources/#families-with-school-aged-children"><strong>Các gia đình có con em ở độ tuổi đến trường</strong></a></li><li><a href="/vi/food-resources/#older-adults"><strong>Người già </strong></a></li><li><a href="/vi/food-resources/#grocery-delivery-options"><strong>Tùy chọn giao hàng tạp hóa</strong></a></li><li><a href="/vi/food-resources/#how-you-can-help"><strong>Quý vị có thể làm gì để giúp đỡ</strong></a></li></ul>
 
 
 
@@ -175,15 +175,15 @@
 
 
 
-<h3 class="js-qa-question">Trợ cấp thực phẩm của CalFresh</h3>
+<h3>Trợ cấp thực phẩm của CalFresh</h3>
 
 
 
-<p class="js-qa-answer">CalFresh cung cấp các chương trình trợ cấp thực phẩm để giúp người dân mua hầu hết các loại thực phẩm tại các cửa hàng tạp hóa và chợ nông sản. Người dân và các gia đình có thu nhập thấp có thể đăng ký xin cấp CalFresh bất kỳ lúc nào. Nếu quý vị có sự thay đổi về mức thu nhập, thậm chí là thay đổi tạm thời do đại dịch vi-rút corona, quý vị có thể đăng ký xin cấp trợ cấp thực phẩm CalFresh.</p>
+<p>CalFresh cung cấp các chương trình trợ cấp thực phẩm để giúp người dân mua hầu hết các loại thực phẩm tại các cửa hàng tạp hóa và chợ nông sản. Người dân và các gia đình có thu nhập thấp có thể đăng ký xin cấp CalFresh bất kỳ lúc nào. Nếu quý vị có sự thay đổi về mức thu nhập, thậm chí là thay đổi tạm thời do đại dịch vi-rút corona, quý vị có thể đăng ký xin cấp trợ cấp thực phẩm CalFresh.</p>
 
 
 
-<p class="js-qa-answer">Để đăng ký, hãy truy cập <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> trực tuyến hoặc gọi <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
+<p>Để đăng ký, hãy truy cập <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> trực tuyến hoặc gọi <a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
 
 
 
