--- a/zh-hant/food-resources/index.html
+++ b/zh-hant/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月15日, 上午9:14</p>
+            <p class="small-text">最近更新&nbsp;2021年3月25日, 下午3:13</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此頁面包含的內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><a href="/zh-hant/food-resources/#emergency-food"><strong>應急食品和食品福利</strong></a></li><li><a href="/zh-hant/food-resources/#families-with-school-aged-children"><strong>有學齡兒童的家庭</strong></a></li><li><a href="/zh-hant/food-resources/#older-adults"><strong>年長者</strong></a></li><li><a href="/zh-hant/food-resources/#grocery-delivery-options"><strong>雜貨配送選項</strong></a></li><li><a href="/zh-hant/food-resources/#how-you-can-help"><strong>您如何提供幫助</strong></a></li></ul>
+<ul class="toc"><li><a href="/zh-hant/food-resources/#emergency-food"><strong>應急食品和食品福利</strong></a></li><li><a href="/zh-hant/food-resources/#families-with-school-aged-children"><strong>有學齡兒童的家庭</strong></a></li><li><a href="/zh-hant/food-resources/#older-adults"><strong>年長者</strong></a></li><li><a href="/zh-hant/food-resources/#grocery-delivery-options"><strong>雜貨配送選項</strong></a></li><li><a href="/zh-hant/food-resources/#how-you-can-help"><strong>您如何提供幫助</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">CalFresh食品福利</h3>
+<h3>CalFresh食品福利</h3>
 
 
 
-<p class="js-qa-answer">CalFresh提供食品福利金，以幫助人們在大多數雜貨店和農夫市場購買大部分食物。低收入人群和家庭可隨時申請CalFresh。如果您的收入出現變化，即使是由於冠狀病毒而出現暫時變化，您也可申請CalFresh食品福利。</p>
+<p>CalFresh提供食品福利金，以幫助人們在大多數雜貨店和農夫市場購買大部分食物。低收入人群和家庭可隨時申請CalFresh。如果您的收入出現變化，即使是由於冠狀病毒而出現暫時變化，您也可申請CalFresh食品福利。</p>
 
 
 
-<p class="js-qa-answer">如欲申請，請前往<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>的網站，或致電<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD)。 </p>
+<p>如欲申請，請前往<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>的網站，或致電<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD)。 </p>
 
 
 
@@ -197,7 +197,7 @@
 
 
 
-<h4> <strong>為大學生</strong><strong>臨時擴大的</strong><strong>資格</strong></h4>
+<h4><strong>為大學生</strong><strong>臨時擴大的</strong><strong>資格</strong></h4>
 
 
 
