--- a/ar/food-resources/index.html
+++ b/ar/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الطعام والمساعدات الغذائية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:14 ص الساعة 15 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:13 م الساعة 25 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>في هذه الصفحة:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><a href="/ar/food-resources/#emergency-food"><strong>أغذية الطوارئ والمساعدات الغذائية</strong></a></li><li><a href="/ar/food-resources/#families-with-school-aged-children"><strong>العائلات التي لديها أطفال في سن المدرسة</strong></a></li><li><a href="/ar/food-resources/#older-adults"><strong>البالغون الأكبر سنًا</strong></a></li><li><a href="/ar/food-resources/#grocery-delivery-options"><strong>خيارات توصيل البقالة</strong></a></li><li><a href="/ar/food-resources/#how-you-can-help"><strong>كيف يمكنك تقديم المساعدة</strong></a></li></ul>
+<ul class="toc"><li><a href="/ar/food-resources/#emergency-food"><strong>أغذية الطوارئ والمساعدات الغذائية</strong></a></li><li><a href="/ar/food-resources/#families-with-school-aged-children"><strong>العائلات التي لديها أطفال في سن المدرسة</strong></a></li><li><a href="/ar/food-resources/#older-adults"><strong>البالغون الأكبر سنًا</strong></a></li><li><a href="/ar/food-resources/#grocery-delivery-options"><strong>خيارات توصيل البقالة</strong></a></li><li><a href="/ar/food-resources/#how-you-can-help"><strong>كيف يمكنك تقديم المساعدة</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">برنامج المساعدات الغذائية CalFresh</h3>
+<h3>برنامج المساعدات الغذائية CalFresh</h3>
 
 
 
-<p class="js-qa-answer">يقدم برنامج CalFresh مزايا غذائية لمساعدة الأشخاص على شراء معظم الأطعمة من معظم متاجر البقالة وأسواق المزارعين. ويمكن للأفراد والعائلات من أصحاب الدخل المحدود التقديم إلى CalFresh في أي وقت. وإذا تغير دخلك، حتى وإن كان بشكلٍ مؤقت بسبب فيروس كورونا، يمكنك التقديم في برنامج المساعدات الغذائية CalFresh.</p>
+<p>يقدم برنامج CalFresh مزايا غذائية لمساعدة الأشخاص على شراء معظم الأطعمة من معظم متاجر البقالة وأسواق المزارعين. ويمكن للأفراد والعائلات من أصحاب الدخل المحدود التقديم إلى CalFresh في أي وقت. وإذا تغير دخلك، حتى وإن كان بشكلٍ مؤقت بسبب فيروس كورونا، يمكنك التقديم في برنامج المساعدات الغذائية CalFresh.</p>
 
 
 
-<p class="js-qa-answer">للتقديم، تفضّل بزيارة <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> عبر الإنترنت أو اتصل بالرقم <a href="tel:[1-877-847-3663]">‎1-877-847-3663 </a>(1-877-847-FOOD). </p>
+<p>للتقديم، تفضّل بزيارة <a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a> عبر الإنترنت أو اتصل بالرقم <a href="tel:[1-877-847-3663]">‎1-877-847-3663 </a>(1-877-847-FOOD). </p>
 
 
 
