--- a/zh-hans/food-resources/index.html
+++ b/zh-hans/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月15日, 上午9:14</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月25日, 下午3:13</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此页面包含的内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><a href="/zh-hans/food-resources/#emergency-food"><strong>应急食品和食品福利</strong></a></li><li><a href="/zh-hans/food-resources/#families-with-school-aged-children"><strong>有学龄儿童的家庭</strong></a></li><li><a href="/zh-hans/food-resources/#older-adults"><strong>年长者 </strong></a></li><li><a href="/zh-hans/food-resources/#grocery-delivery-options"><strong>杂货配送选项</strong></a></li><li><a href="/zh-hans/food-resources/#how-you-can-help"><strong>您如何提供帮助</strong></a></li></ul>
+<ul class="toc"><li><a href="/zh-hans/food-resources/#emergency-food"><strong>应急食品和食品福利</strong></a></li><li><a href="/zh-hans/food-resources/#families-with-school-aged-children"><strong>有学龄儿童的家庭</strong></a></li><li><a href="/zh-hans/food-resources/#older-adults"><strong>年长者 </strong></a></li><li><a href="/zh-hans/food-resources/#grocery-delivery-options"><strong>杂货配送选项</strong></a></li><li><a href="/zh-hans/food-resources/#how-you-can-help"><strong>您如何提供帮助</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">CalFresh食品福利</h3>
+<h3>CalFresh食品福利</h3>
 
 
 
-<p class="js-qa-answer">CalFresh提供食品福利金，以帮助人们在大多数杂货店和农夫市场购买大部分食物。低收入人群和家庭可随时申请CalFresh。如果您的收入出现变化，即使是由于冠状病毒而出现暂时变化，您也可申请CalFresh食品福利。</p>
+<p>CalFresh提供食品福利金，以帮助人们在大多数杂货店和农夫市场购买大部分食物。低收入人群和家庭可随时申请CalFresh。如果您的收入出现变化，即使是由于冠状病毒而出现暂时变化，您也可申请CalFresh食品福利。</p>
 
 
 
-<p class="js-qa-answer">如欲申请，请前往<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>网站，或致电<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD)。 </p>
+<p>如欲申请，请前往<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>网站，或致电<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD)。 </p>
 
 
 
@@ -201,7 +201,7 @@
 
 
 
-<p>自2021年1月16日起，部分学生有资格获取CalFresh福利金以帮助支付生活品采购费。了解<a href="https://www.cdss.ca.gov/Portals/9/CAFSP/CalFresh/Outreach/Resources/Flyer_Temp.%20Student%20Eligibility_FINA.pdf">学生资格的临时变更</a>及如何<a href="https://www.getcalfresh.org/students">在线申请</a>的更多信息。                                                              </p>
+<p>自2021年1月16日起，部分学生有资格获取CalFresh福利金以帮助支付生活品采购费。了解<a href="https://www.cdss.ca.gov/Portals/9/CAFSP/CalFresh/Outreach/Resources/Flyer_Temp.%20Student%20Eligibility_FINA.pdf">学生资格的临时变更</a>及如何<a href="https://www.getcalfresh.org/students">在线申请</a>的更多信息。</p>
 
 
 
