--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 25, 2021 at 4:59 PM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 5:02 PM</p>
           
         </div>
       </div>
@@ -989,7 +989,7 @@
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
             <p>The agriculture and food sector populations (under <a href="https://covid19.ca.gov/vaccines/#Who-can-get-vaccinated-now">Phase 1B</a>) for COVID-19 vaccination include:</p>
-<ul><li>Persons at risk of occupational exposure to coronavirus through their work in any role in the <a href="https://covid19.ca.gov/essential-workforce/#Food-and-Agriculture">Food and Agriculture Sector from CA Essential Workforce</a> list.</li><li>Any employee working in a restaurant to the extent not described in the food and agriculture sector from the CA Essential Worker list.</li><li>Veterinary services employees.</li><li>Medical cannabis workers.</li></ul>
+<ul><li>Persons at risk of occupational exposure to coronavirus through their work in any role in he <a href="https://covid19.ca.gov/essential-workforce/#food-and-agriculture">Food and Agriculture Sector from CA Essential Workforce</a> list.</li><li>Any employee working in a restaurant to the extent not described in the food and agriculture sector from the CA Essential Worker list.</li><li>Veterinary services employees.</li><li>Medical cannabis workers.</li></ul>
 <p>See CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Updated COVID-19 Vaccine Eligibility Guidelines</a> for details.</p>
 
                   </div>
@@ -1022,7 +1022,7 @@
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
             <p>The emergency services sector populations (under <a href="https://covid19.ca.gov/vaccines/#Who-can-get-vaccinated-now">Phase 1B</a>) for COVID-19 vaccination include:</p>
-<ul><li>Persons at risk of occupational exposure to coronavirus through their work in any role in the&nbsp; <a href="https://covid19.ca.gov/essential-workforce/"><strong>Emergency Services Sectors</strong> from the CA Essential Workforce</a>&nbsp;list.</li><li>Utility Workers (Electricity, gas, water, waste, roads/highways) that provide emergency support.&nbsp;</li><li>Disaster Service Workers (DSWs) if at risk of occupational exposure, once activated for emergency response, including those working in temporary non-congregate shelters.</li><li>COVID-19 vaccine clinic volunteers are eligible for vaccination if they complete at least one clinic shift and are approved by the clinic’s organizer.</li><li>Social Workers. Workers responding to abuse and neglect of children, elders and dependent adults, including all front-line social workers and other staff required to enter the home (including mobile home or tent) of the individual at risk.</li></ul>
+<ul><li>Persons at risk of occupational exposure to coronavirus through their work in any role in the <a href="https://covid19.ca.gov/essential-workforce/#emergency-services"><strong>Emergency Services Sectors</strong> from the CA Essential Workforce</a> list.</li><li>Utility Workers (Electricity, gas, water, waste, roads/highways) that provide emergency support. </li><li>Disaster Service Workers (DSWs) if at risk of occupational exposure, once activated for emergency response, including those working in temporary non-congregate shelters.</li><li>COVID-19 vaccine clinic volunteers are eligible for vaccination if they complete at least one clinic shift and are approved by the clinic’s organizer.</li><li>Social Workers. Workers responding to abuse and neglect of children, elders and dependent adults, including all front-line social workers and other staff required to enter the home (including mobile home or tent) of the individual at risk.</li></ul>
 <p>See CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Updated COVID-19 Vaccine Eligibility Guidelines</a> for details.</p>
 
                   </div>
