ADD pages/guidancefeed/cdph/c675c65fc86aaff7c87bb92a9ca45b31.html ac7cba90ade2e5b50e3d3a5d686049d4419e6cba

--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">最后更新时间&nbsp;March 25, 2021 at 5:06 PM</p>
+            <p class="small-text">最后更新时间&nbsp;March 25, 2021 at 5:22 PM</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47846 -->March 24, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today announced the following appointments: Thuy Mascorro, 47, of Chula Vista, has been reappointed Home Administrator of the Veterans Home of California, Chula Vista, where she has ser...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-100.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#362)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--c675c65fc86aaff7c87bb92a9ca45b31 -->March 24, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
