modified links on the homepage stats section (ccg-1746)

--- a/pages/manual-content/homepages/english.html
+++ b/pages/manual-content/homepages/english.html
@@ -14,7 +14,9 @@ varTotalDeaths: "Deaths"
 varTestsReported: "Tests"
 varPercentIncrease: "% increase"
 varCountyMap: "County map"
-varStateSummary: State dashboard
+varStateSummary: State data
+varHealthEquity: Health equity
+varVaccination: Vaccination progress
 varDataAndTools: COVID-19 data and tools
 varUpdateText: "Updated [UpdatedDate] with data from [DataDate]"
 varHeroTitle: Your actions save lives
