--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 26, 2021 at 7:03 PM</p>
+            <p class="small-text">Last updated&nbsp;March 27, 2021 at 9:18 AM</p>
           
         </div>
       </div>
