--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:18 ص الساعة 27 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:36 م الساعة 27 مارس 2021</p>
           
         </div>
       </div>
