--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 29, 2021 sa 12:24 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 29, 2021 sa 12:48 PM</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-104.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#366)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b9f0e8d4a41276c2515ee0b0697c56f2 -->March 28, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent COVID-19 statistics and updates on the state's pandemic response.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-103.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#365)</a>
