--- a/pages/manual-content/homepages/english.html
+++ b/pages/manual-content/homepages/english.html
@@ -18,8 +18,8 @@ varStateSummary: State dashboard
 varDataAndTools: COVID-19 data and tools
 varUpdateText: "Updated [UpdatedDate] with data from [DataDate]"
 varHeroTitle: Your actions save lives
-varHeroP1: "See what’s open in your county"
-varHeroP2: "Wear a mask, wash your hands, and keep your distance"
+varHeroP1: "Find out if it's your turn"
+varHeroP2: "Wear a mask, keep your distance, and get vaccinated"
 varHeroAlertSocial: Check the Governor’s updates
 varVideoTitle: Video Resources
 varVideoWearAMask: Wear a Mask
