update all other translations

--- a/pages/manual-content/homepages/ar.html
+++ b/pages/manual-content/homepages/ar.html
@@ -18,8 +18,8 @@ varStateSummary: ملخص الحالة
 varDataAndTools: بيانات وأدوات COVID-19
 varUpdateText: أرقام محدثة [UpdatedDate] بمعلومات من [DataDate]
 varHeroTitle: أفعالك تنقذ الأرواح
-varHeroP1: "اعرض خريطة المقاطعة لمعرفة ما هو مفتوح"
-varHeroP2: ارتدِ قناعاً واغسل يديك وحافظ على التباعد.
+varHeroP1: "اكتشف ما إذا كان دورك"
+varHeroP2: ارتدِ كمامة ، وحافظ على مسافة بينك وبين التطعيم
 varHeroAlertSocial: راجع المستجدات المعلنة من قبل المحافظ 
 varVideoTitle: موارد الفيديو. 
 varVideoWearAMask: ارتدِ قناعاً!
