--- a/pages/manual-content/homepages/es.html
+++ b/pages/manual-content/homepages/es.html
@@ -18,8 +18,8 @@ varStateSummary: Resumen del estado
 varDataAndTools: Datos y herramientas de COVID-19
 varUpdateText: "Números actualizados ([UpdatedDate]) con información (del [DataDate])"
 varHeroTitle: Sus acciones salvan vidas
-varHeroP1: "Ver el mapa del condado para ver qué está abierto"
-varHeroP2: Use mascarilla, lávese las manos y mantenga su distancia.
+varHeroP1: "Averigua si es tu turno"
+varHeroP2: Use una máscara, mantenga la distancia y vacúnese.
 varHeroAlertSocial: Consulte las actualizaciones del gobernador
 varVideoTitle: Recursos en video
 varVideoWearAMask: Use mascarilla
