--- a/pages/manual-content/homepages/tl.html
+++ b/pages/manual-content/homepages/tl.html
@@ -18,8 +18,8 @@ varStateSummary: Buod ng katayuan
 varDataAndTools: COVID-19 Data at Mga Kasangkapan
 varUpdateText: "Nai-update na mga numero [UpdatedDate] na may impormasyon mula [DataDate]"
 varHeroTitle: Nakakasagip ng buhay ang iyong mga pagkilos
-varHeroP1: "Tingnan ang mapa ng county upang makita kung ano ang bukas"
-varHeroP2: Magsuot ng mask, hugasan ang iyong kamay, magpanatili ng distansya.
+varHeroP1: "Alamin kung ang iyong oras"
+varHeroP2: Magsuot ng maskara, panatilihin ang iyong distansya, at mabakunahan
 varHeroAlertSocial: Tingnan ang Mga Update ng Gobernador
 varVideoTitle: Mga Resource ng Video
 varVideoWearAMask: Magsuot ng Mask
