--- a/pages/manual-content/homepages/vi.html
+++ b/pages/manual-content/homepages/vi.html
@@ -18,8 +18,8 @@ varStateSummary: Tóm tắt trạng thái
 varDataAndTools: COVID-19 Dữ liệu và Công cụ
 varUpdateText: "Số cập nhật ngày [UpdatedDate] sáng với thông tin từ ngày [DataDate]"
 varHeroTitle: Hành động của quý vị sẽ giúp cứu sống mọi người
-varHeroP1: "Xem bản đồ quận để biết những gì đang mở"
-varHeroP2: Đeo khẩu trang, rửa tay, giữ khoảng cách.
+varHeroP1: "Tìm hiểu xem có đến lượt bạn không"
+varHeroP2: Đeo khẩu trang, giữ khoảng cách và tiêm phòng
 varHeroAlertSocial: Xem Thông Tin Cập Nhật của Thống Đốc
 varVideoTitle: Nguồn Thông Tin Video
 varVideoWearAMask: Đeo Khẩu Trang
