--- a/pages/manual-content/homepages/zh-hans.html
+++ b/pages/manual-content/homepages/zh-hans.html
@@ -18,8 +18,8 @@ varStateSummary: 状态摘要
 varDataAndTools: COVID-19数据和工具
 varUpdateText: "[UpdatedDate]更新的数字 从[DataDate]开始提供信息"
 varHeroTitle: 您的行动可拯救生命
-varHeroP1: 查看县地图，看看有什么开放
-varHeroP2: 佩戴口罩、清洗双手、与他人保持距离。
+varHeroP1: 找出是否该轮到你了
+varHeroP2: 戴上口罩，保持距离，并接种疫苗
 varHeroAlertSocial: 查看州长的更新
 varVideoTitle: 影片资源
 varVideoWearAMask: 请佩戴口罩
