--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -11,35 +11,61 @@ addtositemap: false
 <p>All Californians—regardless of where they live, love sample charts. Here are a few to make your day a little more infographical.</p>
 
 
+<h3 class="text-center mb-0">Impact on hospitals and ICUs</h3>
 
-<div class="container">
-    <div class="row">
-        <cagov-chart-vaccines-hpi-by-people class="chart">
-          <ul class="d-none">
-            <li data-label="chartTitle">Vaccines by sand people</li>
-            <li data-label="chartDescription">Lorem ipsum chartDescription people sum</li>
-            <li data-label="legendLabel1">People 16+ partially vaccinated</li>
-            <li data-label="legendLabel2">People 16+ fully vaccinated</li>
-            <li data-label="barLabel">HPI Quartile {N}</li>
-            <li data-label="annotationLeast">Least healthy community conditions</li>
-            <li data-label="annotationMost">Most healthy community conditions</li>
-          </ul>
-        </cagov-chart-vaccines-hpi-by-people>
+
+
+<div class="d-flex flex-column flex-md-row justify-content-center my-3">
+  <div class="js-toggle-county-container d-none">
+    <div class="large-tabs">
+      <button class="large-tab js-toggle-county county d-none">Alameda</button>
+      <button class="large-tab toggle-active js-toggle-county statewide">Statewide</button>
     </div>
-    <div class="row">
-        <cagov-chart-vaccines-hpi-by-dose class="chart">
-          <ul class="d-none">
-            <li data-label="chartTitle">Vaccines by Dose</li>
-            <li data-label="chartDescription">Lorem ipsum chartDescription dose sum</li>
-            <li data-label="legendLabel1">% administered by dose</li>
-            <li data-label="barLabel">HPI Quartile {N}</li>
-            <li data-label="annotationLeast">Least healthy community conditions</li>
-            <li data-label="annotationMost">Most healthy community conditions</li>
-          </ul>
-        </cagov-chart-vaccines-hpi-by-dose>
-    </div>
+  </div>
 </div>
 
+<div class="container">
+  <div class="row">
+
+<div id="hospital-graph" class="toggle-group-element">
+  <div id="hospitalChartContainer">
+    <div class="mx-auto">
+      <p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatHospitalTotal_}}, {{_varStatHospitalChangeText_}} {{_varStatHospitalChange_ | abs}} from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatIcuTotal_}}, {{_varStatIcuChangeText_}} {{_varStatIcuChange_ | abs}} from the prior day total.</p>
+    </div>
+    <!-- <div class="tableauPlaceholder"></div> -->
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-hospitalized-patients-hospitalized class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">COVID-19 hospitalized patients in California</li>
+            <li data-label="chartLegend1">{latest.HOSPITALIZED_PATIENTS.TOTAL} COVID-19 hospitalized patients</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} more hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} increase</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} fewer hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} decrease</li>
+            <li data-label="averageLabel">14-day average</li>
+            <li data-label="tooltipLegend1">Reported date:</li>
+            <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+            <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
+          </ul>
+        </cagov-chart-dashboard-hospitalized-patients-hospitalized>                
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-icu-beds class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">Confirmed deaths by race and ethnicity in California</li>
+            <li data-label="chartLegend1">{latest.ICU_AVAILABLE_BEDS.TOTAL} ICU beds available</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} increase from prior day total</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} decrease from prior day total</li>
+            <li data-label="tooltipCaption">On {DATE} there was a total of {VALUE} available ICU beds.</li>
+          </ul>
+        </cagov-chart-dashboard-icu-beds>               
+      </div> 
+    </div>
+    <p class="small-text chart-footer-caption">footerText will go here</p>
+  </div>
+
+</div>
+
+</div></div>
 
 <!-- build trigger 2-11-2021 2:46pm -->
 <div class="container">
