--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;March 29, 2021 at 5:56 PM</p>
+            <p class="small-text">Last updated&nbsp;March 30, 2021 at 3:42 AM</p>
           
         </div>
       </div>
