--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 29, 2021 sa 5:56 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 30, 2021 sa 3:42 AM</p>
           
         </div>
       </div>
