Update page - plasma.html b8e1d8c77deff0895306e4e8bc771d3b95cd71b8

--- a/plasma/index.html
+++ b/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plasma donation</h1>
           
-            <p class="small-text">Last updated&nbsp;February 5, 2021 at 1:30 PM</p>
+            <p class="small-text">Last updated&nbsp;March 30, 2021 at 8:32 AM</p>
           
         </div>
       </div>
@@ -251,13 +251,13 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Is blood plasma authorized as a COVID-19 treatment?</h4>
+            <h3>Is blood plasma authorized as a COVID-19 treatment?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
             <p>The FDA issued an <a href="https://www.fda.gov/news-events/press-announcements/fda-issues-emergency-use-authorization-convalescent-plasma-potential-promising-covid-19-treatment">Emergency Use Authorization (EUA) for convalescent plasma</a> to treat hospitalized COVID-19 patients.</p>
-<p>The FDA determined that it is reasonable to believe that COVID-19 convalescent plasma may be effective in making  COVID-19 illness shorter and less severe in some patients. The FDA also determined that the known and potential benefits of this plasma, when used to treat COVID-19, outweigh its known and potential risks. There are no adequate, approved, or available alternative treatments.</p>
+<p>The FDA determined that it is reasonable to believe that COVID-19 convalescent plasma may be effective in making&nbsp; COVID-19 illness shorter and less severe in some patients. The FDA also determined that the known and potential benefits of this plasma, when used to treat COVID-19, outweigh its known and potential risks. There are no adequate, approved, or available alternative treatments.</p>
 
                   </div>
                 </div>
