Update translation - 105270199 (#3910) 7b179d495db7c47d88ca49ebf650cb420bfb5cd5

--- a/tl/plasma/index.html
+++ b/tl/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagdo-donate ng plasma</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 5, 2021 sa 1:30 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 30, 2021 sa 8:32 AM</p>
           
         </div>
       </div>
@@ -244,7 +244,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Isa bang awtorisadong paggamot para sa COVID-19 ang plasma ng dugo?</h4>
+            <h3>Isa bang awtorisadong paggamot para sa COVID-19 ang plasma ng dugo?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
