--- a/ar/plasma/index.html
+++ b/ar/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التبرع بالبلازما</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;1:30 م الساعة 5 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;8:32 ص الساعة 30 مارس 2021</p>
           
         </div>
       </div>
@@ -244,7 +244,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل بلازما الدم معتمدة في علاج فيروس كوفيد-19؟</h4>
+            <h3>هل بلازما الدم معتمدة في علاج فيروس كوفيد-19؟</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
