--- a/es/plasma/index.html
+++ b/es/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Donación de plasma</h1>
           
-            <p class="small-text">Última actualización&nbsp;5 de febrero de 2021 a las 1:30 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;30 de marzo de 2021 a las 8:32 a. m.</p>
           
         </div>
       </div>
@@ -244,7 +244,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>¿Está autorizado el plasma sanguíneo como tratamiento para la COVID-19?</h4>
+            <h3>¿Está autorizado el plasma sanguíneo como tratamiento para la COVID-19?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
