--- a/ko/plasma/index.html
+++ b/ko/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>혈장 기부</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 5일 오후 1:30</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 30일 오전 8:32</p>
           
         </div>
       </div>
@@ -244,7 +244,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>혈장은 COVID-19 치료제로 승인받았습니까?</h4>
+            <h3>혈장은 COVID-19 치료제로 승인받았습니까?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
