--- a/zh-hant/plasma/index.html
+++ b/zh-hant/plasma/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>血漿捐獻</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月5日, 下午1:30</p>
+            <p class="small-text">最近更新&nbsp;2021年3月30日, 上午8:32</p>
           
         </div>
       </div>
@@ -244,7 +244,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>血漿是否被授權作為新型冠狀病毒的治療方法？</h4>
+            <h3>血漿是否被授權作為新型冠狀病毒的治療方法？</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
