--- a/pages/manual-content/homepages/ar.html
+++ b/pages/manual-content/homepages/ar.html
@@ -13,18 +13,13 @@ varTotalCases: "العدد الإجمالي للحالات"
 varTotalDeaths: "إجمالي عدد المتوفين"
 varTestsReported: "الاختبارات المبلغ عنها"
 varPercentIncrease: "%"
-varCountyMap: خريطة المقاطعات
 varStateSummary: ملخص الحالة
-varDataAndTools: بيانات وأدوات COVID-19
+varVaccination: تقدم التطعيم
+varHealthEquity: العدالة الصحية
 varUpdateText: أرقام محدثة [UpdatedDate] بمعلومات من [DataDate]
 varHeroTitle: أفعالك تنقذ الأرواح
 varHeroP1: "اكتشف ما إذا كان دورك"
 varHeroP2: ارتدِ كمامة ، وحافظ على مسافة بينك وبين التطعيم
 varHeroAlertSocial: راجع المستجدات المعلنة من قبل المحافظ 
-varVideoTitle: موارد الفيديو. 
-varVideoWearAMask: ارتدِ قناعاً!
-varVideoP1: حتى من دون عوارض، يمكنك أن تعرّض الآخرين إلى COVID-19. ارتدِ قناعاً لإبطاء الانتشار. 
-varVideoWatchTheVideo: شاهد الفيديو. 
 varPeopleWantToKnowTitle: الناس يريدون أن يعرفوا
-varVideoID: 1zDX9PXkotA
 ---
