--- a/pages/manual-content/homepages/ko.html
+++ b/pages/manual-content/homepages/ko.html
@@ -13,18 +13,13 @@ varTotalCases: "총 사례 수"
 varTotalDeaths: "총 사망자 수"
 varTestsReported: "보고 된 테스트"
 varPercentIncrease: "%"
-varCountyMap: 카운티지도
 varStateSummary: 상태 요약
-varDataAndTools: COVID-19 데이터 및 도구
+varVaccination: 예방 접종 진행
+varHealthEquity: 건강 형평성
 varUpdateText: "[UpdatedDate] 업데이트 된 숫자 [DataDate] 정보"
 varHeroTitle: 여러분의 행동이 생명을 살릴 수 있습니다
 varHeroP1: 당신 차례인지 알아보세요
 varHeroP2: 마스크를 쓰고 거리를 유지하고 예방 접종을 받으십시오.
 varHeroAlertSocial: 주지사가 새로 발표하는 내용을 확인하십시오.
-varVideoTitle: 동영상 자원
-varVideoWearAMask: 마스크 착용
-varVideoP1: 증상이 없는 경우에도 다른 사람을 COVID-19에 노출시킬 수 있습니다. 확산을 늦추도록 마스크를 착용하십시오.
-varVideoWatchTheVideo: 동영상 시청
 varPeopleWantToKnowTitle: 희망 확인 사항
-varVideoID: 1zDX9PXkotA
 ---
