--- a/pages/manual-content/homepages/zh-hans.html
+++ b/pages/manual-content/homepages/zh-hans.html
@@ -13,18 +13,13 @@ varTotalCases: "案件总数"
 varTotalDeaths: "死者总数"
 varTestsReported: "报告的测试"
 varPercentIncrease: "%"
-varCountyMap: 县地图
 varStateSummary: 状态摘要
-varDataAndTools: COVID-19数据和工具
+varVaccination: 疫苗接种进度
+varHealthEquity: 健康公平
 varUpdateText: "[UpdatedDate]更新的数字 从[DataDate]开始提供信息"
 varHeroTitle: 您的行动可拯救生命
 varHeroP1: 找出是否该轮到你了
 varHeroP2: 戴上口罩，保持距离，并接种疫苗
 varHeroAlertSocial: 查看州长的更新
-varVideoTitle: 影片资源
-varVideoWearAMask: 请佩戴口罩
-varVideoP1: 即使没有症状，您也可能使他人接触到新型冠状病毒请戴上口罩以减缓传播。
-varVideoWatchTheVideo: 观看影像
 varPeopleWantToKnowTitle: 民众想要了解的信息
-varVideoID: 1zDX9PXkotA
 ---
