--- a/pages/manual-content/homepages/es.html
+++ b/pages/manual-content/homepages/es.html
@@ -13,18 +13,13 @@ varTotalCases: "Número total de casos"
 varTotalDeaths: "Número total de fallecidos"
 varTestsReported: "Testeos reportados"
 varPercentIncrease: "%"
-varCountyMap: Mapa de los condados
 varStateSummary: Resumen del estado
-varDataAndTools: Datos y herramientas de COVID-19
+varVaccination: Progreso de la vacunación
+varHealthEquity: Equidad en salud
 varUpdateText: "Números actualizados ([UpdatedDate]) con información (del [DataDate])"
 varHeroTitle: Sus acciones salvan vidas
 varHeroP1: "Averigua si es tu turno"
 varHeroP2: Use una máscara, mantenga la distancia y vacúnese.
 varHeroAlertSocial: Consulte las actualizaciones del gobernador
-varVideoTitle: Recursos en video
-varVideoWearAMask: Use mascarilla
-varVideoP1: Incluso sin síntomas, puede exponer a otras personas a la COVID-19. Use mascarilla para frenar la propagación.
-varVideoWatchTheVideo: Vea el video
 varPeopleWantToKnowTitle: La gente quiere saber
-varVideoID: 1zDX9PXkotA
 ---
