--- a/pages/manual-content/homepages/tl.html
+++ b/pages/manual-content/homepages/tl.html
@@ -13,18 +13,13 @@ varTotalCases: "Kabuuang bilang ng mga kaso"
 varTotalDeaths: "Kabuuang bilang ng namatay"
 varTestsReported: "Naiulat na mga pagsubok"
 varPercentIncrease: "%"
-varCountyMap: Mga Mapa ng Mga Bansa
 varStateSummary: Buod ng katayuan
-varDataAndTools: COVID-19 Data at Mga Kasangkapan
+varVaccination: Pag-unlad ng pagbabakuna
+varHealthEquity: Equity sa kalusugan
 varUpdateText: "Nai-update na mga numero [UpdatedDate] na may impormasyon mula [DataDate]"
 varHeroTitle: Nakakasagip ng buhay ang iyong mga pagkilos
 varHeroP1: "Alamin kung ang iyong oras"
 varHeroP2: Magsuot ng maskara, panatilihin ang iyong distansya, at mabakunahan
 varHeroAlertSocial: Tingnan ang Mga Update ng Gobernador
-varVideoTitle: Mga Resource ng Video
-varVideoWearAMask: Magsuot ng Mask
-varVideoP1: Kahit wala kang sintomas, puwede mong mailantad ang ibang tao sa COVID-19. Magsuot ng mask para mapabagal ang pagkalat nito.
-varVideoWatchTheVideo: Panoorin ang Video
 varPeopleWantToKnowTitle: Ang gustong malaman ng mga tao
-varVideoID: 1zDX9PXkotA
 ---
