--- a/pages/manual-content/homepages/vi.html
+++ b/pages/manual-content/homepages/vi.html
@@ -13,18 +13,13 @@ varTotalCases: "Tổng số trường hợp"
 varTotalDeaths: "Tổng số người đã chết"
 varTestsReported: "Báo cáo thử nghiệm"
 varPercentIncrease: "%"
-varCountyMap: Bản đồ quận
 varStateSummary: Tóm tắt trạng thái
-varDataAndTools: COVID-19 Dữ liệu và Công cụ
+varVaccination: Tiến độ tiêm chủng
+varHealthEquity: Sức khỏe bình đẳng
 varUpdateText: "Số cập nhật ngày [UpdatedDate] sáng với thông tin từ ngày [DataDate]"
 varHeroTitle: Hành động của quý vị sẽ giúp cứu sống mọi người
 varHeroP1: "Tìm hiểu xem có đến lượt bạn không"
 varHeroP2: Đeo khẩu trang, giữ khoảng cách và tiêm phòng
 varHeroAlertSocial: Xem Thông Tin Cập Nhật của Thống Đốc
-varVideoTitle: Nguồn Thông Tin Video
-varVideoWearAMask: Đeo Khẩu Trang
-varVideoP1: Ngay cả khi không có triệu chứng, quý vị có thể khiến cho người khác bị phơi nhiễm với COVID-19. Đeo khẩu trang để làm giảm bớt sự lây lan.
-varVideoWatchTheVideo: Xem Video
 varPeopleWantToKnowTitle: Mọi người muốn biết
-varVideoID: 1zDX9PXkotA
 ---
