--- a/pages/manual-content/homepages/zh-hant.html
+++ b/pages/manual-content/homepages/zh-hant.html
@@ -13,18 +13,13 @@ varTotalCases: "案件總數"
 varTotalDeaths: "死者總數"
 varTestsReported: "報告的測試"
 varPercentIncrease: "%"
-varCountyMap: 縣地圖
 varStateSummary: 狀態摘要
-varDataAndTools: COVID-19數據和工具
+varVaccination: 疫苗接種進度
+varHealthEquity: 健康公平
 varUpdateText: "[UpdatedDate]更新的數字 從[DataDate]開始提供信息"
 varHeroTitle: 您的行動可拯救生命
 varHeroP1: 找出是否該輪到你了
 varHeroP2: 戴上口罩，保持距離，並接種疫苗
 varHeroAlertSocial: 查看州長的更新資訊
-varVideoTitle: 影片資源
-varVideoWearAMask: 請佩戴口罩
-varVideoP1: 即使沒有症狀，您也可能使他人接觸到新型冠狀病毒。佩戴口罩，減緩擴散。
-varVideoWatchTheVideo: ﻿觀看影片
 varPeopleWantToKnowTitle: 常見問題
-varVideoID: 1zDX9PXkotA
 ---
