Update translation - 105276449 (#3913) d4058dd6e455829deb8c43ca3bfd6ce1c53f172e

--- a/tl/state-dashboard/index.html
+++ b/tl/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>Ang dami ng mga pagpapaospital dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 2,623, an increase of 24 mula sa kabuuan ng naunang araw. Ang dami ng mga pasyente sa ICU dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 627, an increase of 14 mula sa kabuuan ng naunang araw.</p>
+<p>Ang dami ng mga pagpapaospital dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 2,637, an increase of 14 mula sa kabuuan ng naunang araw. Ang dami ng mga pasyente sa ICU dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 622, a decrease of 5 mula sa kabuuan ng naunang araw.</p>
 
 
 
