--- a/zh-hans/state-dashboard/index.html
+++ b/zh-hans/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>在加州因确诊及疑似感染COVID-19而住院的人数总共达到了2,623，an increase of 24来自前一天的总数。在加州因确诊及疑似感染COVID-19而进入ICU的人数总共达到了627，an increase of 14来自前一天的总数。</p>
+<p>在加州因确诊及疑似感染COVID-19而住院的人数总共达到了2,637，an increase of 14来自前一天的总数。在加州因确诊及疑似感染COVID-19而进入ICU的人数总共达到了622，a decrease of 5来自前一天的总数。</p>
 
 
 
