--- a/ar/state-dashboard/index.html
+++ b/ar/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>وداخل مستشفيات كاليفورنيا بلغ عدد الحالات التي يتم علاجها من كوفيد-19 سواء مؤكدة أو مشتبه فيها ما مجموعه 2,623، an increase of 24 من مجموع اليوم السابق. وداخل مستشفيات كاليفورنيا بلغ عدد مرضى وحدات العناية المركزة الذين يُعالجون من كوفيد-19 سواء كانت إصابتهم مؤكدة أو مشتبه فيها ما مجموعه 627، an increase of 14 من مجموع اليوم السابق.</p>
+<p>وداخل مستشفيات كاليفورنيا بلغ عدد الحالات التي يتم علاجها من كوفيد-19 سواء مؤكدة أو مشتبه فيها ما مجموعه 2,637، an increase of 14 من مجموع اليوم السابق. وداخل مستشفيات كاليفورنيا بلغ عدد مرضى وحدات العناية المركزة الذين يُعالجون من كوفيد-19 سواء كانت إصابتهم مؤكدة أو مشتبه فيها ما مجموعه 622، a decrease of 5 من مجموع اليوم السابق.</p>
 
 
 
