--- a/es/state-dashboard/index.html
+++ b/es/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>El número de hospitalizaciones debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 2,623, an increase of 24 desde el total del día anterior. El número de pacientes de ICU debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 627, an increase of 14 desde el total del día anterior.</p>
+<p>El número de hospitalizaciones debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 2,637, an increase of 14 desde el total del día anterior. El número de pacientes de ICU debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 622, a decrease of 5 desde el total del día anterior.</p>
 
 
 
