--- a/ko/state-dashboard/index.html
+++ b/ko/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>캘리포니아 내 COVID-19 확진자 및 의심자로 인한 입원 환자수는 총 2,623 건에 달하며, 전일 총계 대비 증감은 an increase of 24 명입니다. 캘리포니아 내 COVID-19 확진자 및 의심자로 인한 ICU 환자수는 총 627 건에 달하며, 전일 총계 대비 증감은 an increase of 14 명입니다.</p>
+<p>캘리포니아 내 COVID-19 확진자 및 의심자로 인한 입원 환자수는 총 2,637 건에 달하며, 전일 총계 대비 증감은 an increase of 14 명입니다. 캘리포니아 내 COVID-19 확진자 및 의심자로 인한 ICU 환자수는 총 622 건에 달하며, 전일 총계 대비 증감은 a decrease of 5 명입니다.</p>
 
 
 
