--- a/state-dashboard/index.html
+++ b/state-dashboard/index.html
@@ -440,7 +440,7 @@
 
 
 
-<p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of 2,623, an increase of 24 from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of 627, an increase of 14 from the prior day total.</p>
+<p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of 2,637, an increase of 14 from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of 622, a decrease of 5 from the prior day total.</p>
 
 
 
