--- a/vi/state-dashboard/index.html
+++ b/vi/state-dashboard/index.html
@@ -343,7 +343,7 @@
 
 
 
-<p>Tổng số ca nhập viện do các ca nhiễm COVID-19 đã xác nhận và đang nghi ngờ tại California là 2,623, an increase of 24 so với tổng số của ngày trước đó. Tổng số bệnh nhân ICU do các ca nhiễm COVID-19 đã xác nhận và đang nghi ngờ tại California là 627, an increase of 14 so với tổng số của ngày trước đó.</p>
+<p>Tổng số ca nhập viện do các ca nhiễm COVID-19 đã xác nhận và đang nghi ngờ tại California là 2,637, an increase of 14 so với tổng số của ngày trước đó. Tổng số bệnh nhân ICU do các ca nhiễm COVID-19 đã xác nhận và đang nghi ngờ tại California là 622, a decrease of 5 so với tổng số của ngày trước đó.</p>
 
 
 
