--- a/zh-hant/state-dashboard/index.html
+++ b/zh-hant/state-dashboard/index.html
@@ -341,7 +341,7 @@
 
 
 
-<p>在加州因確診及疑似感染COVID-19而住院的人數總共達到了2,623，an increase of 24來自前一天的總數。在加州因確診及疑似感染COVID-19而進入ICU的人數總共達到了627，an increase of 14來自前一天的總數。</p>
+<p>在加州因確診及疑似感染COVID-19而住院的人數總共達到了2,637，an increase of 14來自前一天的總數。在加州因確診及疑似感染COVID-19而進入ICU的人數總共達到了622，a decrease of 5來自前一天的總數。</p>
 
 
 
