Work in progress.

--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -25,7 +25,6 @@ addtositemap: false
 </div>
 
 <div class="container">
-  <div class="row">
 
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12">
@@ -124,7 +123,7 @@ addtositemap: false
 
 </div>
 
-</div></div>
+</div>
 
 <!-- build trigger 2-11-2021 2:46pm -->
 <div class="container">
