Update page - vaccines.html 70fef98363aa621bc0b1a05f5696e1fe716540d4

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;April 1, 2021 at 6:24 AM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 6:38 AM</p>
           
         </div>
       </div>
@@ -715,7 +715,7 @@
           <li data-label="barLabel">Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
-          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.  &#8220;Partially vaccinated&#8221; represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. &#8220;Fully vaccinated&#8221; represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine. Percentage for number of people calculated as people vaccinated in a quartile divided by population of people 16 years of age and over in a quartile.</li>
+          <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.  &#8220;Partially vaccinated&#8221; represents individuals who have received only one dose of the Pfizer or Moderna vaccine. &#8220;Fully vaccinated&#8221; represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine. Percentage for number of people calculated as people vaccinated in a quartile divided by population of people 16 years of age and over in a quartile.</li>
         </ul>
       </cagov-chart-vaccines-hpi-by-people>
   </div>
