Update page - homepage-featured.html

--- a/pages/wordpress-posts/homepage-featured.html
+++ b/pages/wordpress-posts/homepage-featured.html
@@ -1,23 +1,23 @@
 
-  <section class="featured-content" role="region" aria-label="Featured updates">
+<section class="featured-content" role="region" aria-label="Featured updates">
     <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
 					<article class="news-item">
 						<a href="/vaccines/" class="featured-content-image">
-							<img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" />
+							<img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" alt="Californian being vaccinated">
 						</a>
 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Get vaccinated</a></p>
 					</article>
 					<article class="news-item">
 						<a href="/safer-economy/" class="featured-content-image">
-							<img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" />
+							<img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" alt="We are open sign in business window">
 						</a>
 						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">See what&#8217;s open in your county</a></p>
 					</article>
 					<article class="news-item">
 						<a href="/safer-economy/#county-status" class="featured-content-image">
-							<img class="state-map" src="/img/cali-counties-colors.svg" />
+							<img class="state-map" src="/img/cali-counties-colors.svg" alt="California county map with colored tiers">
 						</a>
 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Find your county tier</a></p>
 					</article>
